@@ -1,4 +1,4 @@
-/* Process.java - General interface for a process.
+/* State.java - Annotation to denote a class that can act as a state.
    Copyright (C) 2007 The University of Sheffield
 
 This file is part of DynamiTE.
@@ -24,27 +24,18 @@ conditions of the GNU General Public License cover the whole
 combination.
 */
 
-package uk.ac.shef.dcs.dynamite;
+package uk.ac.shef.dcs.dynamite.lts;
 
-import java.util.Set;
- 
-import uk.ac.shef.dcs.dynamite.lts.State;
-import uk.ac.shef.dcs.dynamite.lts.Transition;
+import java.lang.annotation.Documented;
+import java.lang.annotation.Retention;;
+import static java.lang.annotation.RetentionPolicy.CLASS;
 
 /**
- * Represents a general evolving process.
+ * Represents a state in a labelled transition system.
  *
  * @author Andrew John Hughes (gnu_andrew@member.fsf.org)
  */
-@State
-public interface Process
+@Documented @Retention(CLASS)
+public @interface State
 {
-
-    /**
-     * Returns the set of possible transitions from this process.
-     *
-     * @return the set of possible transitions.
-     */
-    Set<Transition> getPossibleTransitions();
-
 }
